@@ -36,7 +36,7 @@ Gem::Specification.new do |s|
   s.require_path = 'lib'
   s.files = Dir.glob('{lib,test}/**/*') + %w(COPYING README ChangeLog)
   s.test_files = Dir.glob('test/test_*.rb')
-  s.add_dependency('savon', '~> 0.9.9')
+  s.add_dependency('savon', '~> 0.9.10')
   s.add_dependency('httpclient', '~> 2.2.3')
   s.add_dependency('httpi', '~> 0.9.7')
   s.add_dependency('oauth', '~> 0.4.5')
